# sidus_heroes

./: .dockerignore  .env.test  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
integration-tests/: docker-compose.yml  pytest.ini
integration-tests/tests/: conftest.py  test_api.py
internal/: main.py
internal/app/: app.py  container.py  settings.py
internal/app/api/: api.py  common.py  dependencies.py  serializers.py
internal/app/api/v1/: auth.py  users.py
internal/db/: database.py  errors.py
internal/db/migrations/: alembic.ini  env.py
internal/db/migrations/versions/: 2022-07-10_init.py
internal/db/repositories/: base.py  user.py
internal/db/tables/: user.py
internal/models/: schemas.py
internal/pkg/auth/: __init__.py  auth_jwt.py  interface.py
internal/pkg/cache/: __init__.py  interface.py  redis_.py
tests/: conftest.py  test_user.py
