[tool.poetry]
name = "sidus_heroes"
version = "0.1.0"
description = ""
authors = ["bake.necko <bake.necko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
alembic = "^1.8.0"
psycopg2 = "^2.9.3"
pytest = "^7.1.2"
dependency-injector = "^4.39.1"
asyncpg = "^0.26.0"
bcrypt = "^3.2.2"
jwt = "^1.3.1"
python-jose = "^3.3.0"
jose = "^1.0.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.20.0"
redis = ">=4.2.0rc1"
gunicorn = "^20.1.0"
deepdiff = "^5.8.1"
requests = "^2.28.1"
pytest-dotenv = "^0.5.2"
Faker = "^13.15.0"
httpx = "^0.23.0"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.18.3"
containers = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
